--- a/settings.json
+++ b/settings.json
@@ -7,11 +7,11 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
+	"ownerNumber": "6285255115854",
 	"ownerNumberr": "62887435047326",
 	"cr": "@ZeeoneOfc",
 	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"botname":"ARKAN",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
